# C-plus-plus-experiment

./: .gitignore  CMakeLists.txt  main.cpp  model.cpp  model.h
header/: file.h  menu.h  model.h  student.h  tools.h
source/: file.cpp  main.cpp  menu.cpp  model.cpp  student.cpp  tools.cpp
